--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -13,11 +13,19 @@
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5">
+            <TextBlock Text="Project path:" Margin="0 0 5 0"></TextBlock>
+            <TextBox Text="{Binding VdprojFilePath, Mode=TwoWay}"></TextBox>
+            <Button Content="Browse..." Command="{Binding BrowseProjectFilePathCommand}"/>
+
+        </StackPanel>
         
-        <DataGrid ItemsSource="{Binding AssemblyFiles}" AutoGenerateColumns="False" Width="Auto" SelectedItem="{Binding SelectedFileEntryViewModel, Mode=TwoWay}">
+        <DataGrid Grid.Row="1" ItemsSource="{Binding AssemblyFiles}" AutoGenerateColumns="False" Width="Auto" SelectedItem="{Binding SelectedFileEntryViewModel, Mode=TwoWay}">
             <DataGrid.ItemContainerStyle>
                 <Style TargetType="DataGridRow">
                     <EventSetter Event="MouseDoubleClick"
@@ -56,7 +64,7 @@
             </DataGrid.Columns>
         </DataGrid>
         
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="5" HorizontalAlignment="Right">
             <StackPanel.Resources>
                 <Style TargetType="Button">
                     <Setter Property="Margin" Value="0 0 3 0"></Setter>
