--- a/Views/AutoPropertyGrid.xaml
+++ b/Views/AutoPropertyGrid.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.IsSharedSizeScope="True">
+    <ScrollViewer VerticalScrollBarVisibility="Auto">
         <!-- ReSharper disable once InconsistentNaming -->
         <ItemsControl x:Name="PART_ItemsControl"/>
     </ScrollViewer>
