--- a/Views/VdprojPropertyKeyValuePair.xaml
+++ b/Views/VdprojPropertyKeyValuePair.xaml
@@ -1,25 +1,29 @@
 ﻿<UserControl x:Class="SetupProjectHelper.Views.VdprojPropertyKeyValuePair"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SetupProjectHelper.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="5" Grid.IsSharedSizeScope="true">
+             d:DesignHeight="50" d:DesignWidth="400">
+    <Grid Margin="5" Width="Auto">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="LabelColumn"/>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition SharedSizeGroup="KeyColumn"/>
+            <ColumnDefinition SharedSizeGroup="ValueColumn"/>
         </Grid.ColumnDefinitions>
         
         <TextBlock Grid.Column="0"
                    VerticalAlignment="Center"
                    Text="{Binding Label, RelativeSource={RelativeSource AncestorType=UserControl}}"
                    Margin="0 0 6 0"
-                   FontWeight="Bold"></TextBlock>
-        
+                   FontWeight="Bold"
+                   MaxWidth="150"
+                   d:Text="Key"/>
+
         <TextBox Grid.Column="1"
                  VerticalAlignment="Center"
-                 Text="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"></TextBox>
-    </Grid>
+                 Text="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                 IsReadOnly="True"
+                 Width="250"
+                 d:Text="Value"/>
+</Grid>
 </UserControl>
