Update Properties window to use dynamic data template for Value property

--- a/Views/VdprojPropertyKeyValuePair.xaml
+++ b/Views/VdprojPropertyKeyValuePair.xaml
@@ -3,8 +3,25 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:system="clr-namespace:System;assembly=System.Runtime"
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="400">
+    <UserControl.Resources>
+
+        <DataTemplate DataType="{x:Type system:String}">
+            <TextBox VerticalAlignment="Center"
+                     Text="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                     IsReadOnly="True"
+                     Width="250"
+                     d:Text="Value"/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type system:Boolean}">
+            <CheckBox IsChecked="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                      IsEnabled="False"/>
+        </DataTemplate>
+
+    </UserControl.Resources>
     <Grid Margin="5" Width="Auto">
         <Grid.ColumnDefinitions>
             <ColumnDefinition SharedSizeGroup="KeyColumn"/>
@@ -19,11 +36,8 @@
                    MaxWidth="150"
                    d:Text="Key"/>
 
-        <TextBox Grid.Column="1"
-                 VerticalAlignment="Center"
-                 Text="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                 IsReadOnly="True"
-                 Width="250"
-                 d:Text="Value"/>
+        <ContentPresenter Grid.Column="1" 
+                          Content="{Binding Value, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+
 </Grid>
 </UserControl>
